--- a/custom_bi_car_repair/views/sale_order_view.xml
+++ b/custom_bi_car_repair/views/sale_order_view.xml
@@ -35,7 +35,12 @@
                     <field name="license_plate" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="model_year" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                     <field name="responsible_id"/>
+                  </xpath>
+
+                <xpath expr="//field[@name='sale_order_template_id']" position="after">
+                  <field name="description" attrs="{'invisible': [('type_sale', '=', 'normal_sale_order')]}"/>
                 </xpath>
+
                 <xpath expr="//button[@name='action_confirm']" position="attributes">
                     <attribute name="attrs">{'invisible': [('type_sale', '!=', 'normal_sale_order')]}</attribute>
                 </xpath>
@@ -69,9 +74,36 @@
                 
 
             </field>
-        </record>
-        
-    
+          </record>
+          <record id="sale_order_car_services_inherit_tree" model="ir.ui.view">
+            <field name="name">sale.order.car.services.inherit.tree</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_tree"/>
+            <field name="arch" type="xml">
+              <xpath expr="//field[@name='date_order']" position="after">
+                <field name="model" string="Modelo" optional="hide"/>
+                <field name="license_plate" string="Patente" optional="hide"/>
+                <field name="description" string="Diagnostico" optional="hide"/>
+              </xpath>
+
+
+            </field>
+          </record>
+           <record id="sale_order_car_services_inherit_quotation_tree" model="ir.ui.view">
+            <field name="name">sale.order.car.services.inherit.quotation.tree</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_quotation_tree"/>
+            <field name="arch" type="xml">
+              <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="model" string="Modelo" optional="hide"/>
+                <field name="license_plate" string="Patente" optional="hide"/>
+                <field name="description" string="Diagnostico" optional="hide"/>
+              </xpath>
+
+
+            </field>
+          </record>
+ 
     </data>
     
 </odoo>
