Agrega funcionalidades en el portal cliente y servicio tecnico

--- a/custom_bi_car_repair/report/car_diagnosys.xml
+++ b/custom_bi_car_repair/report/car_diagnosys.xml
@@ -80,21 +80,7 @@
                     </div>
                    </div>
                    <br/>
-                   <div class="row">
-                     <div class="col-12">
-                         <t t-if="o.description">
-                        <i class="fa fa-wrench" aria-hidden="true"></i>
-                        <strong>Diagnóstico:</strong> <span t-field="o.description" />
-
-                        </t>
-  
-                        <t t-if="o.observations">
-                        <i class="fa fa-heartbeat" aria-hidden="true"></i>
-                        <strong>Observaciones:</strong> <span t-raw="o.observations"/>
-                      </t>
-                    </div>
-                    
-                   </div>
+                   
                    
                    <div class="row">
                     <table class="table table-borderless" style="max-height:14px;">
@@ -121,11 +107,13 @@
                                     <td style="text-align:center;width:15%;padding:0px;">
                                         <span t-esc="line.quantity"/> 
                                     </td>
-                                    <td style="width:20%;padding:0px;">
-                                        $ <span t-esc="int(line.price)"/>
+                                    <td style="width:20%;padding:0px;">                                     
+
+                                      $ <t t-esc="'{0:,.0f}'.format(int(line['price'])).replace(',', '.')" />
+
                                     </td>
                                     <td style="width:20%;padding:0px;">
-                                        $ <span t-esc="int(line.total_subtotal_line_services)"/>
+                                       $ <t t-esc="'{0:,.0f}'.format(int(line['total_subtotal_line_services'])).replace(',', '.')" />
                                     </td>
                                 </tr>
                                 
@@ -159,10 +147,10 @@
                                         <span t-field="lines.quantity"/>
                                     </td>
                                     <td style="width:20%;padding:0px;">
-                                       $ <span t-esc="int(lines.price)"/>
+                                       $ <t t-esc="'{0:,.0f}'.format(int(lines['price'])).replace(',', '.')"/>
                                     </td>
                                     <td style="width:20%;padding:0px;">
-                                      $  <span t-esc="int(lines.total_subtotal_line_product)"/>
+                                      $  <t t-esc="'{0:,.0f}'.format(int(lines['total_subtotal_line_product'])).replace(',', '.')"/>
                                     </td>
                                 </tr>
 
@@ -182,7 +170,7 @@
                                 Subtotal
                             </td>
                             <td style="padding:0px;">
-                                $ <span t-field="o.total_neto"/>
+                                $ <t t-esc="'{0:,.0f}'.format(int(o['total_neto'])).replace(',', '.')"/>
                             </td>
                         </tr>
                         <tr>
@@ -190,13 +178,13 @@
                                 IVA 19%
                             </td>
                             <td style="padding:0px;">
-                                $ <span t-field="o.total_tax"/>
+                                $ <t t-esc="'{0:,.0f}'.format(int(o['total_tax'])).replace(',', '.')"/>
                             </td>
                         </tr>
                         <tr>
                             <td style="padding:0px;">Total:</td>
                             <td style="padding:0px;">
-                               <strong>$ <span t-field="o.total_tax_incluide"/>
+                               <strong>$ <t t-esc="'{0:,.0f}'.format(int(o['total_tax_incluide'])).replace(',', '.')"/>
                             </strong>
                             </td>
                         </tr>
@@ -209,15 +197,28 @@
                             
                         
                    </div>
-                   <br/>
-                   <br/>
-                   
-                
+
+              
                    
                 
                </div>
                <div class="footer">
                 <footer>
+                    <div class="row">
+                        <div class="col-12">
+                            <t t-if="o.description">
+                           <i class="fa fa-wrench" aria-hidden="true"></i>
+                           <strong>Diagnóstico:</strong> <span t-field="o.description" />
+   
+                           </t>
+     
+                           <t t-if="o.observations">
+                           <i class="fa fa-heartbeat" aria-hidden="true"></i>
+                           <strong>Observaciones:</strong> <span t-raw="o.observations"/>
+                         </t>
+                       </div>
+                       
+                      </div>
                 <div class="firmas" style="margin-top:50px;">
                     
                         <div class="row">
