cambios de flota

--- a/custom_fleet/views/fleet_view.xml
+++ b/custom_fleet/views/fleet_view.xml
@@ -80,12 +80,12 @@
                     <field name="accesories_vehicle" string="Accesorios" widget="many2many_tags"/>
                 </xpath>
                 <xpath expr="//field[@name='patente']" position="after">
-                    <field name="attach_1" string="Documento 1" widget="binary"/>
-                    <field name="attach_1_fname" string="Documento 1" invisible="1"/>
-                    <field name="attach_2" string="Documento 2"/>
-                    <field name="attach_2_fname" string="Documento 2" invisible="1"/>
-                    <field name="attach_3" string="Documento 3"/>
-                    <field name="attach_3_fname" string="Documento 3" invisible="1"/>
+                    <field name="attach_1" string="SOAP" widget="binary"/>
+                    <field name="attach_1_fname" string="SOAP" invisible="1"/>
+                    <field name="attach_2" string="Permiso de Circulacion"/>
+                    <field name="attach_2_fname" string="Permiso de Circulacion" invisible="1"/>
+                    <field name="attach_3" string="Homologado"/>
+                    <field name="attach_3_fname" string="Homologado" invisible="1"/>
                     
                 </xpath>
             </field>
