--- a/financial_management/views/financial_view.xml
+++ b/financial_management/views/financial_view.xml
@@ -1,6 +1,17 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
     <data>
+        <record model="ir.cron" id="financial_management_cron">
+        <field name="name">Inversiones: Actualiza valores de cuotas</field>
+        <field name="model_id" ref="model_financial_management"/>
+        <field name="state">code</field>
+        <field name="code">model.cron_change_values()</field>
+        <field name="interval_number">1</field>
+        <field name="interval_type">days</field>
+        <field name="numbercall">-1</field>
+        <field name="doall" eval="False"/>
+    </record>
+
 
         <record id="financial_table_tree" model="ir.ui.view">
             <field name="name">Creditos</field>
@@ -64,6 +75,7 @@
                                         <field name="pagado" string="pagado"/>
                                         <field name="capital" string="Capital"/>
                                         <field name="interes" string="Interes" />
+                                        <field name="comision_bancaria" string="Comision" />
                                         <field name="valor_cuota" string="Valor Cuota" />
                                         <field name="saldo_capital" string="Saldo Capital"/>
                                         
